# Spotify-EmbedRecomender

./: main.py  pyproject.toml
app/: app.py  data_extractor.py  modelo.py  recommendations.py  settings.py  utils.py
